sending props from an elelmento to another

--- a/src/app/modules/geral/home/home.component.html
+++ b/src/app/modules/geral/home/home.component.html
@@ -1,4 +1,4 @@
 <app-header>
-    <app-dropdown [options]="idiom" (itemClicked)="onDropdownItemClick($event)"></app-dropdown>
-</app-header>
+    <app-dropdown [options]="idiom" (click)="onDropdownClicked()"></app-dropdown>
+</app-header> 
 
