--- a/src/app/shared/components/design-system/dropdown/dropdown.component.scss
+++ b/src/app/shared/components/design-system/dropdown/dropdown.component.scss
@@ -13,8 +13,10 @@
   border: 1px solid white;
   border-radius: 8px ;
   overflow: hidden;
+  cursor: pointer;
   &.active{
     display: flex;
+    background-color: red;
   }
   .dropdown-item{
     display: flex;
