--- a/src/app/shared/components/layout/header/header.component.html
+++ b/src/app/shared/components/layout/header/header.component.html
@@ -1,3 +1,6 @@
 <header>
-    <ng-content></ng-content>
-</header>
+    <ng-content ></ng-content>
+    <div class="box" (click)="toggleDropdown()">
+        <app-dropdown [options]="idiom"  [openDropdown]="openDropdown" (optionSelected)="onLanguageSelected($event)" ></app-dropdown>
+    </div>    
+</header>"
