--- a/src/app/shared/components/design-system/dropdown/dropdown.component.html
+++ b/src/app/shared/components/design-system/dropdown/dropdown.component.html
@@ -1,6 +1,7 @@
 <!-- dropdown.component.html -->
-<div class="dropdown-container" (click)="onDropdownContainerClicked()">
-  <div class="dropdown-item" *ngFor="let option of options" (click)="onItemClick(option)">
-      {{ option.name }}
+<div class="dropdown-container"  [ngClass]="{'active' : openDropdown}" >
+  <div class="dropdown-item" *ngFor="let option of options" [ngClass]="{'selected': option.id === slcOption}" (click)="onOptionSelected(option)">
+    <span class="selection"></span>
+    <span class="text"> {{ option.name }}</span>
   </div>
 </div>
