--- a/src/app/shared/components/layout/header/header.component.scss
+++ b/src/app/shared/components/layout/header/header.component.scss
@@ -9,14 +9,20 @@
     background-color: var(--primary-color);
     position: relative;
     z-index: 0;
+  }
 
-    .line{
-      height: 2px;
-      width: 80%;
-      background-color: white;
-      position: absolute;
-      bottom: 10px;
-    }
+  .box{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 189px;
+    height: 52px;
+    padding: 0px 24px;
+    right: 80px;
+    top: 50px;
+    border: 1px solid white;
+    border-radius: 8px ;
+    cursor: pointer;
   }
   
   
