dropdown, transition to be added

--- a/src/app/shared/components/design-system/dropdown/dropdown.component.html
+++ b/src/app/shared/components/design-system/dropdown/dropdown.component.html
@@ -1,7 +1,14 @@
 <!-- dropdown.component.html -->
-<div class="dropdown-container"  [ngClass]="{'active' : openDropdown}" >
-  <div class="dropdown-item" *ngFor="let option of options" [ngClass]="{'selected': option.id === slcOption}" (click)="onOptionSelected(option)">
-    <span class="selection"></span>
+<div 
+class="dropdown-container"  
+[ngClass]="{'active' : openDropdown}" 
+[ngStyle]="{top: top+'px', bottom: bottom+'px'}">
+  <div 
+  class="dropdown-item" 
+  *ngFor="let option of options" 
+  [ngClass]="{'selected': option.id === slcOption}" 
+  (click)="onOptionSelected(option)">
+    <span class="selection"  *ngIf="option.selection"></span>
     <span class="text"> {{ option.name }}</span>
   </div>
 </div>
