--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -3,7 +3,11 @@
 }
 :root {
 --primary-color: #000917;
---white: #FFFFFF;
+--secondary-color: #4E9CFF;
+--color-white: #FFFFFF;
+--color-white2: #F6F8FC;
+--color-black: #000000;
+
 }
 
 .font-weight-400 { font-family: 'Manrope Regular'; }
