--- a/src/app/shared/components/layout/header/header.component.html
+++ b/src/app/shared/components/layout/header/header.component.html
@@ -6,7 +6,7 @@
         >       
             {{ selectedLanguage.name }}
             <img 
-            src="../../../../../assets/icons/angle-down.svg" 
+            src="assets/icons/angle-down.svg" 
             alt="angle-down"
             [ngClass]="{ 'open': openDropdown }">
         </span>
@@ -18,4 +18,4 @@
         >
         </app-dropdown>
     </div>    
-</header>"
+</header>
