--- a/src/app/shared/components/layout/header/header.component.scss
+++ b/src/app/shared/components/layout/header/header.component.scss
@@ -6,7 +6,7 @@
     align-items: center;
     height: 60px;
     padding: var(--content-padding);
-    background-color: var(--primary-color);
+    background-color: transparent;
     position: relative;
     z-index: 0;
   }
