--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -2,7 +2,7 @@
     margin: 0;
 }
 :root {
---primary-color: #000917;
+--primary-color: #001D41;
 --secondary-color: #4E9CFF;
 --color-white: #FFFFFF;
 --color-white2: #F6F8FC;
