add content and footer component, passing props to background from home

--- a/src/app/modules/geral/home/home.component.html
+++ b/src/app/modules/geral/home/home.component.html
@@ -1,5 +1,10 @@
 <div> 
-    <app-background></app-background>
-    <app-header></app-header>       
+    <app-background 
+    [background]="'var(--primary-color)'"
+    [videoSource]="'assets/videos/geral.mp4'"
+    ></app-background>
+    <app-header></app-header> 
+    <app-content></app-content>
+    <app-footer></app-footer>      
 </div>
 
