--- a/src/app/shared/components/layout/content/content.component.html
+++ b/src/app/shared/components/layout/content/content.component.html
@@ -1,1 +1,5 @@
-<p>content works!</p>
+<ng-content></ng-content>
+<app-logo 
+[svgContent]="svgContent"
+[svgContentSm]="svgContentSm" 
+></app-logo>
