refactoring home to meteoblue

--- a/src/app/shared/components/design-system/logo/logo.component.html
+++ b/src/app/shared/components/design-system/logo/logo.component.html
@@ -4,6 +4,6 @@
         <img [src]="option" alt="logotipo">
     </div>
     <div class="logo-sm" *ngFor="let option of svgContentSm" >
-        <img [src]="option" alt="logotipo-mob">
+        <img [src]="option" alt="logotipo-mobile">
     </div>
 </div>
