--- a/src/app/shared/components/layout/content/content.component.html
+++ b/src/app/shared/components/layout/content/content.component.html
@@ -1,5 +1,10 @@
 <ng-content></ng-content>
-<app-logo 
-[svgContent]="svgContent"
-[svgContentSm]="svgContentSm" 
-></app-logo>
+<div class="left">
+    <app-logo 
+    [svgContent]="svgContent"
+    [svgContentSm]="svgContentSm" 
+    ></app-logo>
+
+   
+</div>]
+
