--- a/src/app/shared/components/layout/content/content.component.html
+++ b/src/app/shared/components/layout/content/content.component.html
@@ -1,10 +1,19 @@
-<ng-content></ng-content>
-<div class="left">
-    <app-logo 
-    [svgContent]="svgContent"
-    [svgContentSm]="svgContentSm" 
-    ></app-logo>
+<div class="principal-content">
+        <div class="text-content">
+                <app-logo 
+                [svgContent]="svgContent"
+                [svgContentSm]="svgContentSm" 
+                ></app-logo>
+    
+                <app-input 
+                [text] ="text"
+                ></app-input>
+        </div>
+        <div class="options-content">
 
-   
-</div>]
+        </div>
+</div>
+
+ 
+
 
