--- a/src/app/modules/geral/meteoblue/meteoblue.component.html
+++ b/src/app/modules/geral/meteoblue/meteoblue.component.html
@@ -8,6 +8,7 @@
 <app-content
     [svgPaths]="svgPaths"
     [svgPathsSm]="svgPathsSm"
+    [brandPath]="brandPath"
     [text]="text"
 ></app-content>
 <app-footer></app-footer>
