--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -4,7 +4,7 @@
 
 :root {
 --primary-color: #001D41;
---secondary-color: #4E9CFF;
+--secondary-color: #002E69;
 --color-white: #FFFFFF;
 --color-white2: #F6F8FC;
 --color-black: #000000;
