--- a/src/app/shared/components/layout/footer/footer.component.scss
+++ b/src/app/shared/components/layout/footer/footer.component.scss
@@ -1,8 +1,22 @@
 footer{
-    background-color: red;
+    background-color: var(--primary-color);
     position: absolute;
     bottom: 0;
     height: 100px;
+    padding: 40px 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     padding: 40px 80px 0 80px;
+    border-top: 2px solid var(--secondary-color);
+    border-radius: 30px 30px 0 0;
+    box-shadow: 0px -4px 35px 0px rgba(1, 18, 40, 0.40);
+
+    @media (max-width: 425px){
+        height: 202px;
+        padding: 24px 12px;
+        border-radius: 10px 10px 0 0;
+
+    }
 }
