--- a/src/app/shared/components/layout/header/header.component.scss
+++ b/src/app/shared/components/layout/header/header.component.scss
@@ -23,10 +23,10 @@
     height: 52px;
     right: 80px;
     top: 50px;
-    border: 1px solid white;
+    border: 1px solid var(--color-white);
     border-radius: 8px ;
     cursor: pointer;
-    color:white;
+    color: var(--color-white);
     
     @media (max-width: 425px){
       display: none;
