--- a/src/app/modules/geral/meteoblue/meteoblue.component.html
+++ b/src/app/modules/geral/meteoblue/meteoblue.component.html
@@ -10,6 +10,9 @@
     [svgPathsSm]="svgPathsSm"
     [brandPath]="brandPath"
     [text]="text"
+    [buttonColor]="buttonColor"
+    [buttonText]="buttonText"
+    [buttonIcon]="buttonIcon"
 ></app-content>
 <app-footer></app-footer>
 </div>
