--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -5,6 +5,7 @@
 :root {
 --primary-color: #001D41;
 --secondary-color: #002E69;
+--button-meteoblue:#4E9CFF;
 --color-white: #FFFFFF;
 --color-white2: #F6F8FC;
 --color-black: #000000;
@@ -152,8 +153,7 @@ body {
 button.primary {
   padding: 10px;
   border: solid 1px var(--white);
-  background: var(--primary-color);
-  color: white;
+  color: var(--color-white);
   border-radius: 8px;
 }
 
