--- a/src/app/shared/components/layout/content/content.component.html
+++ b/src/app/shared/components/layout/content/content.component.html
@@ -6,6 +6,10 @@
     ></app-logo>
 
     <app-input [text]="text"></app-input>
+    <app-button 
+    [buttonColor]="buttonColor"
+    [buttonText]="buttonText"
+    [buttonIcon]="buttonIcon"></app-button>
   </div>
   <div class="options-content">
     <app-brand
