--- a/src/app/shared/components/layout/footer/footer.component.html
+++ b/src/app/shared/components/layout/footer/footer.component.html
@@ -1,3 +1,14 @@
 <footer>
+  <div><app-location-card
+    [image]="image"
+    ></app-location-card></div>
   
+  <div class="contact">
+    <img src='assets/icons/linkedin-sm.svg'>
+    <app-button
+      [buttonColor]="buttonColor"
+      [buttonText]="buttonText"
+      [buttonIcon]="buttonIcon"
+    ></app-button>
+  </div>
 </footer>
