--- a/src/app/modules/geral/meteoblue/meteoblue.component.scss
+++ b/src/app/modules/geral/meteoblue/meteoblue.component.scss
@@ -1,6 +1,6 @@
 .content{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    position: absolute;
     overflow: hidden;
 }
