--- a/src/app/shared/components/layout/background/background/background.component.scss
+++ b/src/app/shared/components/layout/background/background/background.component.scss
@@ -3,14 +3,20 @@
 }
 .background{
     opacity: 0.9;
-    position:fixed;
+    position:absolute;
     width: 100%;
     height: 100%;
 }
 
+.video-container{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .video{
     mix-blend-mode: multiply;   
-    object-fit: cover; 
+    object-fit: fill;
     bottom: 0;
     width: 100%;
     height: 100%;
