--- a/src/app/shared/components/layout/content/content.component.scss
+++ b/src/app/shared/components/layout/content/content.component.scss
@@ -3,8 +3,8 @@
   flex-direction: row;
   gap: 50px;
   justify-content: space-between;
-  padding: 0 80px;
-  height: calc(100% - 475px);
+  padding: 50px 80px;
+  height: calc(100% - 400px);
 
   @media (max-width: 425px){
     flex-direction: column;
