--- a/src/app/shared/components/layout/footer/footer.component.scss
+++ b/src/app/shared/components/layout/footer/footer.component.scss
@@ -1,22 +1,28 @@
-footer{
-    background-color: var(--primary-color);
-    position: absolute;
-    bottom: 0;
-    height: 100px;
+footer {
+    height: 162px;
     padding: 40px 80px;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 40px 80px 0 80px;
+    align-content: center;
+    background-color: var(--primary-color);
     border-top: 2px solid var(--secondary-color);
     border-radius: 30px 30px 0 0;
     box-shadow: 0px -4px 35px 0px rgba(1, 18, 40, 0.40);
-
-    @media (max-width: 425px){
+    
+    @media(max-width:425px){
         height: 202px;
         padding: 24px 12px;
-        border-radius: 10px 10px 0 0;
-
+        flex-direction: column;
+        position: absolute;
+        bottom: 0;
     }
-}
+
+    .contact{
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        height: 50px;
+    }
+  }
+
