--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    padding: 0;
 }
 
 :root {
@@ -148,6 +149,7 @@ body {
   background: var(--white);
   width: 100%;
   height: 100%;
+  position: relative;
 }
   
 button.primary {
