--- a/src/app/modules/geral/geral.component.html
+++ b/src/app/modules/geral/geral.component.html
@@ -16,8 +16,9 @@
     [buttonIcon]="buttonIconContent"
   ></app-content>
 
-  <app-footer
+  <app-footer class="banana"
     [image]="images"
+    [location]="location"
     [buttonColor]="buttonColor"
     [buttonText]="buttonTextFooter"
     [buttonIcon]="buttonIconFooter"
