--- a/src/app/modules/geral/geral.component.scss
+++ b/src/app/modules/geral/geral.component.scss
@@ -1,6 +1,15 @@
 .content{
     height: 100%;
-    width: 100%;
-    position: absolute;
-    overflow: hidden;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+
+.banana{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
