--- a/src/app/shared/components/layout/footer/footer.component.html
+++ b/src/app/shared/components/layout/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer>
   <div><app-location-card
     [image]="image"
+    [location]="location"
     ></app-location-card></div>
   
   <div class="contact">
