--- a/src/app/shared/components/layout/footer/footer.component.scss
+++ b/src/app/shared/components/layout/footer/footer.component.scss
@@ -1,10 +1,11 @@
 footer {
     height: 162px;
     padding: 40px 80px;
+    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     background-color: var(--primary-color);
     border-top: 2px solid var(--secondary-color);
     border-radius: 30px 30px 0 0;
@@ -17,6 +18,10 @@ footer {
         position: absolute;
         bottom: 0;
     }
+
+    @media screen and (min-width: 1900px){
+        padding: 40px 284px
+      }
 
     .contact{
         display: flex;
