--- a/src/app/shared/components/layout/header/header.component.scss
+++ b/src/app/shared/components/layout/header/header.component.scss
@@ -2,7 +2,7 @@
     height: 162px;
     @media (max-width: 425px){
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     }   
   }
