--- a/src/app/modules/geral/geral.component.html
+++ b/src/app/modules/geral/geral.component.html
@@ -3,7 +3,7 @@
 [videoSource]="'assets/videos/geral.mp4'"
 ></app-background>
 <div class="content">
-  <div>
+  <div class="text">
     <app-header></app-header>
     <app-content
       [svgPaths]="svgPaths"
@@ -15,7 +15,7 @@
       [buttonIcon]="buttonIconContent"
     ></app-content>
   </div>
-  <app-footer class=""
+  <app-footer
     [image]="images"
     [location]="location"
     [buttonColor]="buttonColor"
