--- a/src/app/shared/components/layout/footer/footer.component.html
+++ b/src/app/shared/components/layout/footer/footer.component.html
@@ -1,8 +1,10 @@
 <footer>
-  <div><app-location-card
+  <div>
+    <app-location-card
     [image]="image"
     [location]="location"
-    ></app-location-card></div>
+    ></app-location-card>
+  </div>
   
   <div class="contact">
     <img src='assets/icons/linkedin-sm.svg'>
