--- a/src/app/modules/geral/geral.component.scss
+++ b/src/app/modules/geral/geral.component.scss
@@ -1,7 +1,13 @@
 .content{
     height: 100%;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;   
+
+    @media(max-width: 768px){
+        .text{
+        height: calc(100% - 250px);
+        }
+    }
 }
