--- a/src/app/shared/components/design-system/brand/brand.component.scss
+++ b/src/app/shared/components/design-system/brand/brand.component.scss
@@ -1,16 +1,16 @@
-.brands{
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
-    width: fit-content;
-}
-
 .grid-container{
     display: grid;
     grid-template-columns: auto auto;
     gap: 50px;
+    flex-wrap: wrap;
     
-    @media (max-width: 1024px) {
+    @media(max-width:425px){
+        gap: 8px;
+        img{
+            width: 85%;
+        }
+    }    
+    @media (min-width:769px) and (max-width: 1024px) {
         grid-template-columns: auto;
     }
 }
@@ -19,3 +19,4 @@
     display: flex;
     justify-content: center;
 }
+
