--- a/src/app/shared/components/design-system/button/button.component.scss
+++ b/src/app/shared/components/design-system/button/button.component.scss
@@ -1,10 +1,10 @@
 button {
   padding: 12px 24px;
   display: flex;
-  align-content: center;
+  flex-direction: row;
+  align-items: center;
   gap: 8px;
   color: var(--color-white);
-  text-align: center;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
