--- a/src/app/shared/components/layout/content/content.component.scss
+++ b/src/app/shared/components/layout/content/content.component.scss
@@ -6,8 +6,10 @@
   padding: 0px 80px;
   gap: 50px;  
 
-  @media (max-width: 425px){
+  @media (max-width: 768px){
     flex-direction: column;
+    padding: 24px 12px;
+    gap: 24px;
   }
 
   @media screen and (min-width: 1900px){
@@ -20,6 +22,10 @@
   justify-content: space-between;
   gap: 50px;  
   overflow: hidden;
+
+  @media(max-width: 425px){
+    gap: 12px;
+  }
 }
 .options-content{
   padding: 0 54px;
@@ -28,7 +34,12 @@
   justify-content: center;
   align-items: center;
 
-  @media (max-width: 1024px){
+  @media (max-width: 768px){
+    padding: 0 12px 0 12px;
+    width: 99%;
+  }
+
+  @media (min-width:769px) and (max-width: 1024px){
    padding: 0 20px;
    width: 30%;
   }
