--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -20,7 +20,7 @@
 
 h6, h5, h4, h3, h2, h1 { @extend .font-weight-700; }
 h3, h2, h1 { line-height: auto; }
-h6, h5, h4 { line-height: 1.5; }
+h6, h5, h4 { line-height: 150%; }
 h6 { font-size: 16px; }
 h5 { font-size: 20px; }
 h4 { font-size: 24px; }
@@ -28,7 +28,7 @@ h3 { font-size: 32px; }
 h2 { font-size: 48px; }
 h1 { font-size: 64px; }
 
-.p5, .p4, .p3, .p2, .p1 { line-height: 1.5; }
+.p5, .p4, .p3, .p2, .p1 { line-height: 150%; }
 .p5, .p4, .p3, .p2 { @extend .font-weight-500; }
 .p5 { font-size: 12px; }
 .p4 { font-size: 14px; }
@@ -37,6 +37,19 @@ h1 { font-size: 64px; }
 .p1 {
   @extend .font-weight-400;
   font-size: 24px;
+}
+
+@media (max-width:425px) {
+  .p5, .p4, .p3, .p2, .p1 { line-height: 150%; }
+  .p5, .p4, .p3, .p2 { @extend .font-weight-500; }
+  .p5 { font-size: 8px; }
+  .p4 { font-size: 10px; }
+  .p3 { font-size: 12px; }
+  .p2 { font-size: 14px; }
+  .p1 {
+    @extend .font-weight-400;
+    font-size: 20px;
+  }  
 }
 
 .round-sm, .round-sm-t, .round-sm-tl { border-top-left-radius: 4px; }
@@ -55,11 +68,6 @@ h1 { font-size: 64px; }
 .round-xl, .round-xl-t, .round-xl-tr { border-top-right-radius: 40px; }
 .round-xl, .round-xl-b, .round-xl-bl { border-bottom-left-radius: 40px; }
 .round-xl, .round-xl-b, .round-xl-br { border-bottom-right-radius: 40px; }
-
-.shadow-sm { filter: drop-shadow(0px 4px 15px rgba(10, 53, 66, 0.10)); }
-.shadow-md { filter: drop-shadow(2px 2px 20px rgba(10, 53, 66, 0.10)); }
-.shadow-lg { filter: drop-shadow(0px 16px 25px rgba(10, 53, 66, 0.20)); }
-.shadow-xl { filter: drop-shadow(0px 16px 30px rgba(10, 53, 66, 0.25)); }
 
 .custom-head { background: var(--color-primary-dark); }
 .custom-menu { background: var(--color-primary-dark); }
@@ -143,12 +151,11 @@ h1 { font-size: 64px; }
 }
 
 
-html,
 body {
   @extend .text-default-medium;
-  background: var(--white);
   width: 100%;
   height: 100%;
+  position: fixed;
 }
   
 button.primary {
