--- a/src/app/modules/geral/geral.component.scss
+++ b/src/app/modules/geral/geral.component.scss
@@ -4,10 +4,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;   
-
+    .text{
+        height: calc(100% - 50px);
+    }
+    @media(min-width:769px) and (max-width:1025){
+        .text{
+            height: calc(100% - 500px);
+        }
+    }
     @media(max-width: 768px){
         .text{
-        height: calc(100% - 250px);
+        height: calc(100% - 300px);
         }
     }
 }
