--- a/src/app/shared/components/design-system/dropdown/dropdown.component.scss
+++ b/src/app/shared/components/design-system/dropdown/dropdown.component.scss
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     padding: 12px;
-    color: black;
+    color: var(--color-black);
   
     .selection{
       justify-self: start;
@@ -31,7 +31,7 @@
     }
   }
   .dropdown-item:hover{
-    background-color:var(--color-white);
+    background-color: var(--color-white);
     font-weight: 900;
     color: var(--secondary-color)
   }
