--- a/src/app/shared/components/design-system/input/input.component.scss
+++ b/src/app/shared/components/design-system/input/input.component.scss
@@ -1,11 +1,3 @@
 p{
-    color: white;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 150%; 
-
-    @media(max-width: 425px){
-        font-size: 16px;
-    }
+    color: var(--color-white);
 }
