--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -32,7 +32,7 @@ h1 { font-size: 64px; }
 .p5, .p4, .p3, .p2 { @extend .font-weight-500; }
 .p5 { font-size: 12px; }
 .p4 { font-size: 14px; }
-.p3 { font-size: 16px; }
+.p3 { font-size: 14px; }
 .p2 { font-size: 18px; }
 .p1 {
   @extend .font-weight-400;
@@ -42,9 +42,9 @@ h1 { font-size: 64px; }
 @media (max-width:425px) {
   .p5, .p4, .p3, .p2, .p1 { line-height: 150%; }
   .p5, .p4, .p3, .p2 { @extend .font-weight-500; }
-  .p5 { font-size: 8px; }
+  .p5 { font-size: 10px; }
   .p4 { font-size: 10px; }
-  .p3 { font-size: 12px; }
+  .p3 { font-size: 10px; }
   .p2 { font-size: 14px; }
   .p1 {
     @extend .font-weight-400;
@@ -159,10 +159,21 @@ body {
 }
   
 button.primary {
-  padding: 10px;
-  border: solid 1px var(--white);
   color: var(--color-white);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 150%;
   border-radius: 8px;
+  border:none;
+  padding: 12px 24px;
+  gap: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  @media(max-width: 768px){
+    font-size: 12px;
+    padding: 5px 8px;
+  }
 }
 
 
