--- a/src/app/shared/components/layout/content/content.component.scss
+++ b/src/app/shared/components/layout/content/content.component.scss
@@ -1,7 +1,7 @@
 .principal-content{
   display: flex;
   flex-direction: row;
-  height: calc(100% - 200px);
+  height: 100%;
   justify-content: space-between;
   padding: 0px 80px;
   gap: 50px;  
@@ -21,11 +21,15 @@
 .text-content{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  gap: 50px;  
+  justify-content: space-between; 
   overflow: hidden;
 
-  @media(max-width:768px) and (min-width:426px){
+  @media(min-width:769px) and (max-width:1400px){
+    gap: 5px;
+    justify-content: space-around;
+  }
+
+  @media(max-width:768px) and (min-width:425px){
     gap: 24px;
     .button{
       display: flex;
