--- a/src/app/shared/components/layout/footer/footer.component.scss
+++ b/src/app/shared/components/layout/footer/footer.component.scss
@@ -17,6 +17,9 @@ footer {
         flex-direction: column;
         align-items: start;
     }
+    @media(min-width:1000px) and (max-width:1400px){
+      height: 40px ;
+    }
 
     @media screen and (min-width: 1900px){
         padding: 40px 284px
@@ -34,7 +37,9 @@ footer {
         }
 
         @media(max-width: 425px){
+          img{
           height: 30px;
+          }
         }
     }
   }
