new assets and environments

--- a/src/app/shared/components/layout/footer/footer.component.html
+++ b/src/app/shared/components/layout/footer/footer.component.html
@@ -7,7 +7,7 @@
   </div>
   
   <div class="contact">
-    <img src='assets_context2/icons/linkedin-sm.svg'>
+    <img [src]="linkedin">
     <app-button
       [buttonColor]="buttonColor"
       [buttonText]="buttonText"
