--- a/src/app/modules/geral/geral.component.html
+++ b/src/app/modules/geral/geral.component.html
@@ -21,5 +21,6 @@
     [buttonColor]="buttonColor"
     [buttonText]="buttonTextFooter"
     [buttonIcon]="buttonIconFooter"
+    [linkedin]="linkedin"
   ></app-footer>
 </div>
