--- a/src/app/modules/geral/geral.component.html
+++ b/src/app/modules/geral/geral.component.html
@@ -16,8 +16,7 @@
     ></app-content>
   </div>
   <app-footer
-    [image]="images"
-    [location]="location"
+    [location]="locations"
     [buttonColor]="buttonColor"
     [buttonText]="buttonTextFooter"
     [buttonIcon]="buttonIconFooter"
