add brand properties

--- a/src/app/modules/geral/geral.component.html
+++ b/src/app/modules/geral/geral.component.html
@@ -1,6 +1,6 @@
 <app-background
-[background]="'var(--primary-color)'"
-[videoSource]="'assets/videos/geral.mp4'"
+  [background]="'var(--primary-color)'"
+  [videoSource]="'assets/videos/geral.mp4'"
 ></app-background>
 <div class="content">
   <div class="text">
@@ -8,7 +8,7 @@
     <app-content
       [svgPaths]="svgPaths"
       [svgPathsSm]="svgPathsSm"
-      [brandPath]="brandPath"
+      [brandPath]="brands"
       [text]="text"
       [buttonColor]="buttonColor"
       [buttonText]="buttonTextContent"
