scss with different enviroments

--- a/src/app/modules/geral/geral.component.html
+++ b/src/app/modules/geral/geral.component.html
@@ -1,6 +1,6 @@
 <app-background
-  [background]="'var(--primary-color)'"
-  [videoSource]="'assets/videos/geral.mp4'"
+  [background]="background"
+  [videoSource]="video"
 ></app-background>
 <div class="content">
   <div class="text">
