--- a/src/global-styles/theme.scss
+++ b/src/global-styles/theme.scss
@@ -3,15 +3,15 @@
     padding: 0;
 }
 
-:root {
---primary-color: #001D41;
---secondary-color: #002E69;
---button-meteoblue:#4E9CFF;
---color-white: #FFFFFF;
---color-white2: #F6F8FC;
---color-black: #000000;
+// :root {
+// --primary-color: #001D41;
+// --secondary-color: #002E69;
+// --button-meteoblue:#4E9CFF;
+// --color-white: #FFFFFF;
+// --color-white2: #F6F8FC;
+// --color-black: #000000;
 
-}
+// }
 
 .font-weight-400 { font-family: 'Manrope Regular'; }
 .font-weight-500 { font-family: 'Manrope Medium'; }
